[tool.poetry]
name = "aplus"
version = "0.1.0"
description = "Submit a+ attendance codes with Canvas"
authors = ["Noskcaj <kcajdev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
canvasapi = "^2.2.0"
click = "^8.0.1"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
